<resources>
    <string name="app_name">QuinbayProject1</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="rating">Rating</string>
    <string name="Rs">\u20B9</string>
    <string name="RAM">RAM</string>
    <string name="storage">storage</string>
    <string name="processor_name">processor name</string>
    <string name="battery">battery</string>
    <string name="select_merchant">Select Merchant</string>
    <string name="product_price">product price</string>
    <string name="color">color</string>
    <string name="added_to_cart">Item added to cart</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="qty">Qty : </string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="check_out">Check out</string>
    <string name="cart_items">Cart items</string>
    <string name="view_details">View Details</string>
    <string name="order_history">Order history</string>
    <string name="brand_name">Something</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="login_with_google">Login with google</string>
    <string name="user_profile">User profile</string>
    <string name="user_info">User info</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_home_address">User home address</string>
    <string name="user_office_address">User office address</string>
    <string name="order_summary">Order summary</string>
    <string name="total">Total</string>
    <string name="add_delivery_address">Add delivery address</string>
    <string name="enter_here">Enter here...</string>
    <string name="confirm_check_out">Confirm Checkout</string>








</resources>